@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-21T01:08:03Z",
-  "count" : 12,
+  "timestamp" : "2024-02-21T16:19:49Z",
+  "count" : 11,
   "count_minmax" : [ 1, 13 ],
-  "count_decinc" : [ -1, +13 ],
-  "uniques" : 11,
+  "count_decinc" : [ -2, +13 ],
+  "uniques" : 10,
   "uniques_minmax" : [ 1, 11 ],
-  "uniques_decinc" : [ -0, +11 ]
+  "uniques_decinc" : [ -1, +11 ]
 }
