@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-21T08:20:52Z",
-  "count" : 4,
-  "count_minmax" : [ 4, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2024-02-21T16:19:49Z",
+  "count" : 7,
+  "count_minmax" : [ 4, 7 ],
+  "count_decinc" : [ -0, +7 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
