@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-02-21T08:20:52Z",
+  "timestamp" : "2024-02-21T16:19:49Z",
   "count_outdated" : 6774,
   "uniques_outdated" : 2695,
-  "count" : 7066,
-  "uniques" : 2901,
+  "count" : 7069,
+  "uniques" : 2902,
   "clones" : [
     {
       "timestamp": "2024-02-07T00:00:00Z",
-      "count": 12,
+      "count": 11,
       "count_minmax": [ 1, 13 ],
-      "count_decinc": [ 1, 13 ],
-      "uniques": 11,
+      "count_decinc": [ 2, 13 ],
+      "uniques": 10,
       "uniques_minmax": [ 1, 11 ],
-      "uniques_decinc": [ 0, 11 ]
+      "uniques_decinc": [ 1, 11 ]
     },
     {
       "timestamp": "2024-02-08T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2024-02-21T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 7,
+      "count_minmax": [ 4, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
